@@ -1,6 +1,12 @@
 Easy:
 =====
 
+o Use media stock icons and music-player icon (gtk_icon_theme_lookup_icon) once
+  we use GTK 2.3, also make app icon themable, and use different window icons
+o Make the main window use a toolbar (and put "song info" button in it),
+  and switch to Actions API
+o Use GnomeVFS
+
 o A song information dialog (Jorn is on this)
   See http://huizen.dds.nl/~jbaayen/infodialog-proposal.html
 o D-BUS service (Sergio Rubio is on this)
@@ -45,13 +51,6 @@ o Make title and artist label one for easier selection.
 o Use storage
 o Support OGM files
   These will work once GStreamer supports them
-o Use media stock icons and music-player icon (gtk_icon_theme_lookup_icon) once
-  we use GTK 2.3, also make app icon themable, and use different window icons
-  Depends on Gtk# supporting Gtk 2.3
-o Use the GTK+ 2.3 fileselector, if it is available.
-  Depends on Gtk# supporting Gtk 2.3
-o Make the main window use a toolbar (and put "song info" button in it)
-  Depends on Gtk# supporting Gtk 2.3
 o Fix the bug where keysyms that are assigned while muine is running aren't
   working.
   Depends on GConf#, Ximian Bugzilla #55877
